--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "kafka-node": "^5.0.0",
     "lodash": "^4.17.21"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
