--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "kafka-node": "^5.0.0",
     "lodash": "^4.17.21"
   },
-  "devDependencies": {},
   "keywords": []
 }
